syntax = "proto3";
package idl;
option go_package = "./idl";
import "share.proto";

service NodeManageService {
  rpc RunMapleTask (RunMapleTaskRequest) returns (RunMapleTaskResponse);
  rpc RunJuiceTask (RunJuiceTaskRequest) returns (RunJuiceTaskResponse);
}

message InputSplit {
  string input_file_name = 1;
  int32 input_offset = 2;
  int32 input_size = 3;
}

message RunMapleTaskRequest {
  string exe_name = 1;
  string intermediate_filename_prefix = 2;
  repeated InputSplit input_splits = 3;
  repeated string exe_args = 4;

  string attempt_id = 5;
}

message RunMapleTaskResponse {
  StatusCode code = 1;
  repeated string tmp_intermediate_files = 2;
  optional string ErrInfo = 3;
}

message RunJuiceTaskRequest {
  string exe_name = 1;
  repeated string input_intermediate_files = 2;
  string out_put_filename = 3;
  string attempt_id = 4;
}

message RunJuiceTaskResponse {
  StatusCode code = 1;
  string tmp_output_filename = 2;
  optional string ErrInfo = 3;
}

service JobManageService {
  rpc Heartbeat (HeartbeatRequest) returns (HeartBeatResponse);
}

message HeartbeatRequest {
  string host = 1;
}

message HeartBeatResponse {

}

message ExecuteMapleJobRequest {
  string exe_name = 1;
  string intermediate_filename_prefix = 2;
  repeated string input_files = 3;
  int32 num_maples = 4;
  repeated string exe_args = 5;
}

message ExecuteMapleJobResponse {
  StatusCode code = 1;
  repeated string intermediate_files = 2;
}